feat: security hardening, dead-letter queue, KG ingestion rewrite, hungarian ES analyzers, CI pipeline
Phase 1 - Auth perimeter hardening:
- SecurityConfig: fail-secure explicit allowlist, /pst/**, /find/**, /pdf/** ROLE_ADMIN only
- @PreAuthorize on all admin controllers (dupla vedelem)
- Custom AuthenticationEntryPoint: 401 minden autentikaLatlan API keresre

Phase 2 - Secrets es port expozicio:
- application.properties: NEO4J_URI, NEO4J_PASSWORD env var-bol; actuator health-only
- .env.example: ADMIN_PASSWORD, NEO4J_URI, NEO4J_PASSWORD hozzaadva
- docker-compose healthcheck: /api/progress -> /actuator/health

Phase 3 - Dead-letter queue (failed_conversions):
- FailedConversion @Document: REPLY_STRIP es ATTACHMENT_CONVERT tipusok, retry szamlalo
- FailedConversionRepository: findByResolved, findByFailureTypeAndResolved
- EDiscoveryIngestionService: soft-fail rogzites + retryFailed/retryAllFailed/getFailedConversions
- EDiscoveryController: POST /retry-failed, POST /retry-failed/{id}, GET /failed vegpontok
- EDiscoveryFailedConversionTest: 6 unit teszt

Phase 4 - Neo4j ingestion rewrite:
- 2-fazisu pipeline: virtualis szalak NER + fix pool Neo4j iras (max-concurrent-writes)
- KgIngestionProperties @ConfigurationProperties: batch-size, max-concurrent-writes
- Deadlock retry logika eltavolitva

Phase 5 - Magyar stemming Elasticsearch-ben:
- ElasticsearchConfig: hungarian_stemmed (Snowball) + hungarian_ascii (asciifolding) analyzer
- hungarianMultiField(): text + .ascii subfield minden szoveges mezohoz
- EDiscoverySearchService: multi_match kiegeszitve .ascii subfield-ekre

Phase 6 - CI pipeline:
- GitHub Actions: backend-test, frontend-lint-build, python-sidecar, sast-spotbugs,
  sca-owasp, scan-secrets (Gitleaks), container-scan (Trivy), hadolint, build-and-push (GHCR)
- JaCoCo: 0.8.13 -> 0.8.15 (Java 26 class file version 70 kompatibilitas)
- SecurityFilterChainTest: 11 integracios teszt (401/403/200 ellenorzes)
  Fix: @WithMockUser -> SecurityMockMvcRequestPostPro